# soft_timer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake_all.sh
cmake/: CodeCoverage.cmake  EnableExtraCompilerWarnings.cmake
include/soft_timer/: timer.h
source/: timer.c
test/: CMakeLists.txt
test/suites/: test_timer.cpp  test_timer_set_interval.cpp  test_timer_set_timeout.cpp
